// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`blueprint tests > flowchart > LR flowchart 1`] = `
{
  "edges": [
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -0,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "Stop",
      "label": "",
      "size": "s",
      "startNodeId": "Start",
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "Start",
      "label": "Start",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 168.92578125,
      "x": 10,
      "y": 10,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "Stop",
      "label": "Stop",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 162.109375,
      "x": 278.92578125,
      "y": 10,
    },
  ],
}
`;

exports[`blueprint tests > flowchart > LR flowchart with parallel edges and self-loop 1`] = `
{
  "edges": [
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -40.58741146299364,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "B",
      "label": "Request",
      "size": "s",
      "startNodeId": "A",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -30.99304888699404,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "A",
      "label": "Response",
      "size": "s",
      "startNodeId": "B",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -0,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "C",
      "label": "",
      "size": "s",
      "startNodeId": "B",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -65.62721294332658,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "D",
      "label": "Yes",
      "size": "s",
      "startNodeId": "C",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": 12.983734907505857,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "E",
      "label": "No",
      "size": "s",
      "startNodeId": "C",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -25.438208677927367,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "D",
      "label": "",
      "size": "s",
      "startNodeId": "D",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": 0,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "F",
      "label": "",
      "size": "s",
      "startNodeId": "D",
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "A",
      "label": "Client",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 184.00390625,
      "x": 10,
      "y": 257.3085937509313,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "B",
      "label": "Server",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 189.43359375,
      "x": 422.59765625,
      "y": 257.3085937509313,
    },
    {
      "align": "middle",
      "geo": "diamond",
      "h": 214.1796875,
      "id": "C",
      "label": "Decision",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 214.1796875,
      "x": 712.03125,
      "y": 198.84179687593132,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "D",
      "label": "Process",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 203.515625,
      "x": 1070.80078125,
      "y": 91.34375000139698,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "E",
      "label": "Reject",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 191.0546875,
      "x": 1077.03125,
      "y": 288.589843751397,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "F",
      "label": "Done",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 170.625,
      "x": 1374.31640625,
      "y": 10,
    },
  ],
}
`;

exports[`blueprint tests > flowchart > TB flowchart with parallel edges and self-loop 1`] = `
{
  "edges": [
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": 96.54017577239328,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "B",
      "label": "Request",
      "size": "s",
      "startNodeId": "A",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": 60.6583800260071,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "A",
      "label": "Response",
      "size": "s",
      "startNodeId": "B",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -0,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "C",
      "label": "",
      "size": "s",
      "startNodeId": "B",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": 86.63034186265298,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "D",
      "label": "Yes",
      "size": "s",
      "startNodeId": "C",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -23.164685915173592,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "E",
      "label": "No",
      "size": "s",
      "startNodeId": "C",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": 38.276358600708534,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "D",
      "label": "",
      "size": "s",
      "startNodeId": "D",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": 0,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "F",
      "label": "",
      "size": "s",
      "startNodeId": "D",
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "A",
      "label": "Client",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 184.00390625,
      "x": 337.3281250009313,
      "y": 10,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "B",
      "label": "Server",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 189.43359375,
      "x": 334.6132812509313,
      "y": 254.4921875,
    },
    {
      "align": "middle",
      "geo": "diamond",
      "h": 214.1796875,
      "id": "C",
      "label": "Decision",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 214.1796875,
      "x": 322.2402343759313,
      "y": 451.73828125,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "D",
      "label": "Process",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 203.515625,
      "x": 86.24218750046566,
      "y": 813.1640625,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "E",
      "label": "Reject",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 191.0546875,
      "x": 389.75781250046566,
      "y": 813.1640625,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "F",
      "label": "Done",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 170.625,
      "x": 10,
      "y": 1010.41015625,
    },
  ],
}
`;

exports[`blueprint tests > flowchart > flowchart with classDef fill+stroke 1`] = `
{
  "edges": [
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -0,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "B",
      "label": "",
      "size": "s",
      "startNodeId": "A",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -0,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "C",
      "label": "",
      "size": "s",
      "startNodeId": "B",
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "color": "blue",
      "fill": "solid",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "A",
      "label": "API Gateway",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 277.4609375,
      "x": 10,
      "y": 10,
    },
    {
      "align": "middle",
      "color": "blue",
      "fill": "solid",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "B",
      "label": "Auth Service",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 276.7578125,
      "x": 10.3515625,
      "y": 207.24609375,
    },
    {
      "align": "middle",
      "color": "violet",
      "fill": "solid",
      "geo": "ellipse",
      "h": 117.69002914428711,
      "id": "C",
      "label": "Users DB",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 146.9921875,
      "x": 75.234375,
      "y": 404.4921875,
    },
  ],
}
`;

exports[`blueprint tests > flowchart > flowchart with classDef fills 1`] = `
{
  "edges": [
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -0,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "B",
      "label": "",
      "size": "s",
      "startNodeId": "A",
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "color": "light-green",
      "fill": "solid",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "A",
      "label": "Start",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 168.92578125,
      "x": 10,
      "y": 10,
    },
    {
      "align": "middle",
      "color": "blue",
      "fill": "solid",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "B",
      "label": "End",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 151.640625,
      "x": 18.642578125,
      "y": 207.24609375,
    },
  ],
}
`;

exports[`blueprint tests > flowchart > flowchart with inline style directives 1`] = `
{
  "edges": [
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -0,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "B",
      "label": "",
      "size": "s",
      "startNodeId": "A",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": 54.72288677457419,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "C",
      "label": "",
      "size": "s",
      "startNodeId": "B",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -54.72288677457419,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "D",
      "label": "",
      "size": "s",
      "startNodeId": "B",
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "A",
      "label": "Request",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 211.42578125,
      "x": 158.4765625,
      "y": 10,
    },
    {
      "align": "middle",
      "color": "orange",
      "fill": "solid",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "B",
      "label": "Validation",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 240.546875,
      "x": 143.916015625,
      "y": 207.24609375,
    },
    {
      "align": "middle",
      "color": "green",
      "fill": "solid",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "C",
      "label": "Success",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 206.25,
      "x": 10,
      "y": 404.4921875,
    },
    {
      "align": "middle",
      "color": "red",
      "fill": "solid",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "D",
      "label": "Failure",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 198.0078125,
      "x": 316.25,
      "y": 404.4921875,
    },
  ],
}
`;

exports[`blueprint tests > flowchart > flowchart with linkStyle color and dash 1`] = `
{
  "edges": [
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -33.372049248877495,
      "color": "green",
      "dash": "solid",
      "endNodeId": "B",
      "label": "GET",
      "size": "m",
      "startNodeId": "A",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -107.54296875,
      "color": "blue",
      "dash": "dashed",
      "endNodeId": "B",
      "label": "POST",
      "size": "m",
      "startNodeId": "A",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -33.37204924887748,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "A",
      "label": "200",
      "size": "s",
      "startNodeId": "B",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -107.54296875,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "A",
      "label": "400",
      "size": "s",
      "startNodeId": "B",
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "A",
      "label": "Client",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 184.00390625,
      "x": 10,
      "y": 93.369140625,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "B",
      "label": "API",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 144.921875,
      "x": 366.25,
      "y": 93.369140625,
    },
  ],
}
`;

exports[`blueprint tests > flowchart > flowchart with subgraphs 1`] = `
{
  "edges": [
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": 181.21097357708658,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "a2",
      "label": "",
      "size": "s",
      "startNodeId": "c1",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -0,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "a2",
      "label": "",
      "size": "s",
      "startNodeId": "a1",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -0,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "b2",
      "label": "",
      "size": "s",
      "startNodeId": "b1",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": 4.8269022881961385,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "c2",
      "label": "",
      "size": "s",
      "startNodeId": "c1",
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "semi",
      "geo": "rectangle",
      "h": 533.4921875,
      "id": "one",
      "label": "one",
      "parentId": undefined,
      "size": "s",
      "verticalAlign": "start",
      "w": 258.0859375,
      "x": 935.29296875,
      "y": -4,
    },
    {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "semi",
      "geo": "rectangle",
      "h": 236.24609375,
      "id": "two",
      "label": "two",
      "parentId": undefined,
      "size": "s",
      "verticalAlign": "start",
      "w": 530.6640625,
      "x": 342.12890625,
      "y": 46,
    },
    {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "semi",
      "geo": "rectangle",
      "h": 533.4921875,
      "id": "three",
      "label": "three",
      "parentId": undefined,
      "size": "s",
      "verticalAlign": "start",
      "w": 269.62890625,
      "x": 10,
      "y": -4,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "c1",
      "label": "c1",
      "parentId": "three",
      "size": "m",
      "verticalAlign": "middle",
      "w": 132.12890625,
      "x": 85,
      "y": 122.5,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "a2",
      "label": "a2",
      "parentId": "one",
      "size": "m",
      "verticalAlign": "middle",
      "w": 133.0859375,
      "x": 997.79296875,
      "y": 382.24609375,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "a1",
      "label": "a1",
      "parentId": "one",
      "size": "m",
      "verticalAlign": "middle",
      "w": 133.0859375,
      "x": 997.79296875,
      "y": 122.5,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "b1",
      "label": "b1",
      "parentId": "two",
      "size": "m",
      "verticalAlign": "middle",
      "w": 134.08203125,
      "x": 407.75390625,
      "y": 122.5,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "b2",
      "label": "b2",
      "parentId": "two",
      "size": "m",
      "verticalAlign": "middle",
      "w": 134.08203125,
      "x": 673.0859375,
      "y": 122.5,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "c2",
      "label": "c2",
      "parentId": "three",
      "size": "m",
      "verticalAlign": "middle",
      "w": 132.12890625,
      "x": 72.5,
      "y": 382.24609375,
    },
  ],
}
`;

exports[`blueprint tests > flowchart > simple TD flowchart 1`] = `
{
  "edges": [
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -0,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "B",
      "label": "",
      "size": "s",
      "startNodeId": "A",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": 31.46574345324915,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "C",
      "label": "Yes",
      "size": "s",
      "startNodeId": "B",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -60.926454683796834,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "E",
      "label": "No",
      "size": "s",
      "startNodeId": "B",
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "A",
      "label": "Start",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 168.92578125,
      "x": 61.318359375,
      "y": 10,
    },
    {
      "align": "middle",
      "geo": "diamond",
      "h": 161.30859375,
      "id": "B",
      "label": "Is it?",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 161.30859375,
      "x": 65.126953125,
      "y": 207.24609375,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "C",
      "label": "OK",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 139.375,
      "x": 10,
      "y": 515.80078125,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 97.24609375,
      "id": "E",
      "label": "End",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 151.640625,
      "x": 136.0546875,
      "y": 860.29296875,
    },
  ],
}
`;

exports[`blueprint tests > sequence diagram > sequence diagram with activation boxes 1`] = `
{
  "edges": [
    {
      "anchorEndY": 0.2,
      "anchorStartY": 0.2,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "endNodeId": "lifeline-John",
      "isExact": true,
      "isPrecise": true,
      "label": "Hello John, how are you?",
      "size": "s",
      "startNodeId": "lifeline-Alice",
    },
    {
      "anchorEndY": 0.4,
      "anchorStartY": 0.4,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "endNodeId": "lifeline-John",
      "isExact": true,
      "isPrecise": true,
      "label": "John, can you hear me?",
      "size": "s",
      "startNodeId": "lifeline-Alice",
    },
    {
      "anchorEndY": 0.6,
      "anchorStartY": 0.6,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "dotted",
      "endNodeId": "lifeline-Alice",
      "isExact": true,
      "isPrecise": true,
      "label": "Hi Alice, I can hear you!",
      "size": "s",
      "startNodeId": "lifeline-John",
    },
    {
      "anchorEndY": 0.8,
      "anchorStartY": 0.8,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "dotted",
      "endNodeId": "lifeline-Alice",
      "isExact": true,
      "isPrecise": true,
      "label": "I feel great!",
      "size": "s",
      "startNodeId": "lifeline-John",
    },
  ],
  "groups": [
    [
      "actor-top-Alice",
      "lifeline-Alice",
      "actor-bottom-Alice",
    ],
    [
      "actor-top-John",
      "lifeline-John",
      "actor-bottom-John",
    ],
  ],
  "lines": [
    {
      "endY": 390,
      "id": "lifeline-Alice",
      "x": -150,
      "y": -190,
    },
    {
      "endY": 390,
      "id": "lifeline-John",
      "x": 150,
      "y": -190,
    },
  ],
  "nodes": [
    {
      "color": "light-violet",
      "fill": "solid",
      "geo": "rectangle",
      "h": 257.4,
      "id": "activation-1",
      "size": "s",
      "w": 20,
      "x": 140,
      "y": -123.7,
    },
    {
      "color": "light-violet",
      "fill": "solid",
      "geo": "rectangle",
      "h": 101.4,
      "id": "activation-0",
      "size": "s",
      "w": 20,
      "x": 146,
      "y": -45.7,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-Alice",
      "label": "Alice",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -240,
      "y": -265,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-Alice",
      "label": "Alice",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -240,
      "y": 200,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-John",
      "label": "John",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 60,
      "y": -265,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-John",
      "label": "John",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 60,
      "y": 200,
    },
  ],
}
`;

exports[`blueprint tests > sequence diagram > sequence diagram with alt/else 1`] = `
{
  "edges": [
    {
      "anchorEndY": 0.25,
      "anchorStartY": 0.25,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "endNodeId": "lifeline-App",
      "isExact": true,
      "isPrecise": true,
      "label": "Sign in",
      "size": "s",
      "startNodeId": "lifeline-User",
    },
    {
      "anchorEndY": 0.5,
      "anchorStartY": 0.5,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "dotted",
      "endNodeId": "lifeline-User",
      "isExact": true,
      "isPrecise": true,
      "label": "Redirect to dashboard",
      "size": "s",
      "startNodeId": "lifeline-App",
    },
    {
      "anchorEndY": 0.75,
      "anchorStartY": 0.75,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "dotted",
      "endNodeId": "lifeline-User",
      "isExact": true,
      "isPrecise": true,
      "label": "Show error message",
      "size": "s",
      "startNodeId": "lifeline-App",
    },
  ],
  "groups": [
    [
      "actor-top-User",
      "lifeline-User",
      "actor-bottom-User",
    ],
    [
      "actor-top-App",
      "lifeline-App",
      "actor-bottom-App",
    ],
  ],
  "lines": [
    {
      "endY": 390,
      "id": "lifeline-User",
      "x": -150,
      "y": -190,
    },
    {
      "endY": 390,
      "id": "lifeline-App",
      "x": 150,
      "y": -190,
    },
    {
      "color": "light-blue",
      "dash": "dashed",
      "endX": 540,
      "endY": 0,
      "id": "fragment-0-sep-1",
      "size": "s",
      "x": -270,
      "y": 53.75,
    },
  ],
  "nodes": [
    {
      "align": "start",
      "color": "light-blue",
      "dash": "dashed",
      "fill": "none",
      "geo": "rectangle",
      "h": 172.5,
      "id": "fragment-0",
      "label": "alt [Credentials valid]",
      "size": "s",
      "verticalAlign": "start",
      "w": 540,
      "x": -270,
      "y": -45,
    },
    {
      "align": "start",
      "color": "light-blue",
      "dash": "dashed",
      "fill": "none",
      "geo": "rectangle",
      "h": 25,
      "id": "fragment-0-section-1",
      "label": "[Credentials invalid]",
      "size": "s",
      "verticalAlign": "start",
      "w": 530,
      "x": -265,
      "y": 58.75,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-User",
      "label": "User",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -240,
      "y": -265,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-User",
      "label": "User",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -240,
      "y": 200,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-App",
      "label": "App",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 60,
      "y": -265,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-App",
      "label": "App",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 60,
      "y": 200,
    },
  ],
}
`;

exports[`blueprint tests > sequence diagram > sequence diagram with autonumber 1`] = `
{
  "edges": [
    {
      "anchorEndY": 0.25,
      "anchorStartY": 0.25,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "decoration": {
        "type": "autonumber",
        "value": "1",
      },
      "endNodeId": "lifeline-Bob",
      "isExact": true,
      "isPrecise": true,
      "label": "Hello",
      "size": "s",
      "startNodeId": "lifeline-Alice",
    },
    {
      "anchorEndY": 0.5,
      "anchorStartY": 0.5,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "dotted",
      "decoration": {
        "type": "autonumber",
        "value": "2",
      },
      "endNodeId": "lifeline-Alice",
      "isExact": true,
      "isPrecise": true,
      "label": "Hi",
      "size": "s",
      "startNodeId": "lifeline-Bob",
    },
    {
      "anchorEndY": 0.75,
      "anchorStartY": 0.75,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "decoration": {
        "type": "autonumber",
        "value": "3",
      },
      "endNodeId": "lifeline-Bob",
      "isExact": true,
      "isPrecise": true,
      "label": "How are you?",
      "size": "s",
      "startNodeId": "lifeline-Alice",
    },
  ],
  "groups": [
    [
      "actor-top-Alice",
      "lifeline-Alice",
      "actor-bottom-Alice",
    ],
    [
      "actor-top-Bob",
      "lifeline-Bob",
      "actor-bottom-Bob",
    ],
  ],
  "lines": [
    {
      "endY": 390,
      "id": "lifeline-Alice",
      "x": -150,
      "y": -190,
    },
    {
      "endY": 390,
      "id": "lifeline-Bob",
      "x": 150,
      "y": -190,
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-Alice",
      "label": "Alice",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -240,
      "y": -265,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-Alice",
      "label": "Alice",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -240,
      "y": 200,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-Bob",
      "label": "Bob",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 60,
      "y": -265,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-Bob",
      "label": "Bob",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 60,
      "y": 200,
    },
  ],
}
`;

exports[`blueprint tests > sequence diagram > sequence diagram with create participant 1`] = `
{
  "edges": [
    {
      "anchorEndY": 0.2,
      "anchorStartY": 0.2,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "endNodeId": "lifeline-App",
      "isExact": true,
      "isPrecise": true,
      "label": "Start report generation",
      "size": "s",
      "startNodeId": "lifeline-User",
    },
    {
      "anchorEndY": 0.5,
      "anchorStartY": 0.4,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "endNodeId": "actor-top-JobRunner",
      "isExact": true,
      "isExactEnd": false,
      "isPrecise": true,
      "isPreciseEnd": false,
      "label": "Spawn background job",
      "size": "s",
      "startNodeId": "lifeline-App",
    },
    {
      "anchorEndY": 0.6,
      "anchorStartY": 0.6,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "dotted",
      "endNodeId": "lifeline-App",
      "isExact": true,
      "isPrecise": true,
      "label": "Job started",
      "size": "s",
      "startNodeId": "lifeline-JobRunner",
    },
    {
      "anchorEndY": 0.8,
      "anchorStartY": 0.8,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "dotted",
      "endNodeId": "lifeline-User",
      "isExact": true,
      "isPrecise": true,
      "label": "Report is processing",
      "size": "s",
      "startNodeId": "lifeline-App",
    },
  ],
  "groups": [
    [
      "actor-top-User",
      "lifeline-User",
      "actor-bottom-User",
    ],
    [
      "actor-top-App",
      "lifeline-App",
      "actor-bottom-App",
    ],
    [
      "actor-top-JobRunner",
      "lifeline-JobRunner",
      "actor-bottom-JobRunner",
    ],
  ],
  "lines": [
    {
      "endY": 514.5,
      "id": "lifeline-User",
      "x": -355.3738317757009,
      "y": -252.25,
    },
    {
      "endY": 514.5,
      "id": "lifeline-App",
      "x": -55.37383177570092,
      "y": -252.25,
    },
    {
      "endY": 271.2,
      "id": "lifeline-JobRunner",
      "x": 355.3738317757009,
      "y": -8.949999999999989,
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-User",
      "label": "User",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -445.3738317757009,
      "y": -327.25,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-User",
      "label": "User",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -445.3738317757009,
      "y": 262.25,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-App",
      "label": "App",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -145.37383177570092,
      "y": -327.25,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-App",
      "label": "App",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -145.37383177570092,
      "y": 262.25,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-JobRunner",
      "label": "JobRunner",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 265.3738317757009,
      "y": -83.94999999999999,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-JobRunner",
      "label": "JobRunner",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 265.3738317757009,
      "y": 262.25,
    },
  ],
}
`;

exports[`blueprint tests > sequence diagram > sequence diagram with explicit activate/deactivate 1`] = `
{
  "edges": [
    {
      "anchorEndY": 0.2,
      "anchorStartY": 0.2,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "endNodeId": "lifeline-API",
      "isExact": true,
      "isPrecise": true,
      "label": "Get order",
      "size": "s",
      "startNodeId": "lifeline-Client",
    },
    {
      "anchorEndY": 0.4,
      "anchorStartY": 0.4,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "endNodeId": "lifeline-DB",
      "isExact": true,
      "isPrecise": true,
      "label": "Query order",
      "size": "s",
      "startNodeId": "lifeline-API",
    },
    {
      "anchorEndY": 0.6,
      "anchorStartY": 0.6,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "dotted",
      "endNodeId": "lifeline-API",
      "isExact": true,
      "isPrecise": true,
      "label": "Order row",
      "size": "s",
      "startNodeId": "lifeline-DB",
    },
    {
      "anchorEndY": 0.8,
      "anchorStartY": 0.8,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "dotted",
      "endNodeId": "lifeline-Client",
      "isExact": true,
      "isPrecise": true,
      "label": "Order JSON",
      "size": "s",
      "startNodeId": "lifeline-API",
    },
  ],
  "groups": [
    [
      "actor-top-Client",
      "lifeline-Client",
      "actor-bottom-Client",
    ],
    [
      "actor-top-API",
      "lifeline-API",
      "actor-bottom-API",
    ],
    [
      "actor-top-DB",
      "lifeline-DB",
      "actor-bottom-DB",
    ],
  ],
  "lines": [
    {
      "endY": 390,
      "id": "lifeline-Client",
      "x": -300,
      "y": -190,
    },
    {
      "endY": 390,
      "id": "lifeline-API",
      "x": 0,
      "y": -190,
    },
    {
      "endY": 390,
      "id": "lifeline-DB",
      "x": 300,
      "y": -190,
    },
  ],
  "nodes": [
    {
      "color": "light-violet",
      "fill": "solid",
      "geo": "rectangle",
      "h": 257.4,
      "id": "activation-1",
      "size": "s",
      "w": 20,
      "x": -10,
      "y": -123.7,
    },
    {
      "color": "light-violet",
      "fill": "solid",
      "geo": "rectangle",
      "h": 101.4,
      "id": "activation-0",
      "size": "s",
      "w": 20,
      "x": 290,
      "y": -45.7,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-Client",
      "label": "Client",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -390,
      "y": -265,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-Client",
      "label": "Client",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -390,
      "y": 200,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-API",
      "label": "API",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -90,
      "y": -265,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-API",
      "label": "API",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -90,
      "y": 200,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-DB",
      "label": "DB",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 210,
      "y": -265,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-DB",
      "label": "DB",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 210,
      "y": 200,
    },
  ],
}
`;

exports[`blueprint tests > sequence diagram > sequence diagram with loop, opt, and self-message 1`] = `
{
  "edges": [
    {
      "anchorEndY": 0.2,
      "anchorStartY": 0.2,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "endNodeId": "lifeline-Q",
      "isExact": true,
      "isPrecise": true,
      "label": "enqueue(job)",
      "size": "s",
      "startNodeId": "lifeline-P",
    },
    {
      "anchorEndY": 0.4,
      "anchorStartY": 0.4,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "endNodeId": "lifeline-Q",
      "isExact": true,
      "isPrecise": true,
      "label": "dequeue()",
      "size": "s",
      "startNodeId": "lifeline-W",
    },
    {
      "anchorEndY": 0.6,
      "anchorStartY": 0.6,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "dotted",
      "endNodeId": "lifeline-W",
      "isExact": true,
      "isPrecise": true,
      "label": "job?",
      "size": "s",
      "startNodeId": "lifeline-Q",
    },
    {
      "anchorEndY": 0.8400000000000001,
      "anchorStartY": 0.76,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": -80,
      "dash": "solid",
      "endNodeId": "lifeline-W",
      "isExact": true,
      "isPrecise": true,
      "label": "execute()",
      "size": "s",
      "startNodeId": "lifeline-W",
    },
  ],
  "groups": [
    [
      "actor-top-P",
      "lifeline-P",
      "actor-bottom-P",
    ],
    [
      "actor-top-Q",
      "lifeline-Q",
      "actor-bottom-Q",
    ],
    [
      "actor-top-W",
      "lifeline-W",
      "actor-bottom-W",
    ],
  ],
  "lines": [
    {
      "endY": 390,
      "id": "lifeline-P",
      "x": -300,
      "y": -190,
    },
    {
      "endY": 390,
      "id": "lifeline-Q",
      "x": 0,
      "y": -190,
    },
    {
      "endY": 390,
      "id": "lifeline-W",
      "x": 300,
      "y": -190,
    },
  ],
  "nodes": [
    {
      "align": "start",
      "color": "light-blue",
      "dash": "dashed",
      "fill": "none",
      "geo": "rectangle",
      "h": 153,
      "id": "fragment-0",
      "label": "loop [poll]",
      "size": "s",
      "verticalAlign": "start",
      "w": 540,
      "x": -120,
      "y": -84,
    },
    {
      "align": "start",
      "color": "light-blue",
      "dash": "dashed",
      "fill": "none",
      "geo": "rectangle",
      "h": 75,
      "id": "fragment-1",
      "label": "opt [job received]",
      "size": "s",
      "verticalAlign": "start",
      "w": 240,
      "x": 180,
      "y": 72,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-P",
      "label": "Producer",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -390,
      "y": -265,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-P",
      "label": "Producer",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -390,
      "y": 200,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-Q",
      "label": "Queue",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -90,
      "y": -265,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-Q",
      "label": "Queue",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -90,
      "y": 200,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-W",
      "label": "Worker",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 210,
      "y": -265,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-W",
      "label": "Worker",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 210,
      "y": 200,
    },
  ],
}
`;

exports[`blueprint tests > sequence diagram > sequence diagram with notes 1`] = `
{
  "edges": [
    {
      "anchorEndY": 0.16666666666666666,
      "anchorStartY": 0.16666666666666666,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "endNodeId": "lifeline-John",
      "isExact": true,
      "isPrecise": true,
      "label": "Hello",
      "size": "s",
      "startNodeId": "lifeline-Alice",
    },
    {
      "anchorEndY": 0.8333333333333334,
      "anchorStartY": 0.8333333333333334,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "dotted",
      "endNodeId": "lifeline-Alice",
      "isExact": true,
      "isPrecise": true,
      "label": "Hi!",
      "size": "s",
      "startNodeId": "lifeline-John",
    },
  ],
  "groups": [
    [
      "actor-top-Alice",
      "lifeline-Alice",
      "actor-bottom-Alice",
    ],
    [
      "actor-top-John",
      "lifeline-John",
      "actor-bottom-John",
    ],
  ],
  "lines": [
    {
      "endY": 390,
      "id": "lifeline-Alice",
      "x": -150,
      "y": -190,
    },
    {
      "endY": 390,
      "id": "lifeline-John",
      "x": 150,
      "y": -190,
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-Alice",
      "label": "Alice",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -240,
      "y": -265,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-Alice",
      "label": "Alice",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -240,
      "y": 200,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-John",
      "label": "John",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 60,
      "y": -265,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-John",
      "label": "John",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 60,
      "y": 200,
    },
    {
      "align": "middle",
      "color": "yellow",
      "dash": "draw",
      "fill": "solid",
      "geo": "rectangle",
      "h": 59,
      "id": "note-1",
      "label": "Alice thinks",
      "size": "s",
      "verticalAlign": "middle",
      "w": 172,
      "x": -145,
      "y": -89.5,
    },
    {
      "align": "middle",
      "color": "yellow",
      "dash": "draw",
      "fill": "solid",
      "geo": "rectangle",
      "h": 59,
      "id": "note-2",
      "label": "John ponders",
      "size": "s",
      "verticalAlign": "middle",
      "w": 172,
      "x": -27,
      "y": -24.5,
    },
    {
      "align": "middle",
      "color": "yellow",
      "dash": "draw",
      "fill": "solid",
      "geo": "rectangle",
      "h": 59,
      "id": "note-3",
      "label": "Both see this",
      "size": "s",
      "verticalAlign": "middle",
      "w": 305,
      "x": -152.5,
      "y": 40.5,
    },
  ],
}
`;

exports[`blueprint tests > sequence diagram > simple sequence diagram 1`] = `
{
  "edges": [
    {
      "anchorEndY": 0.25,
      "anchorStartY": 0.25,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "endNodeId": "lifeline-John",
      "isExact": true,
      "isPrecise": true,
      "label": "Hello John, how are you?",
      "size": "s",
      "startNodeId": "lifeline-Alice",
    },
    {
      "anchorEndY": 0.5,
      "anchorStartY": 0.5,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "dotted",
      "endNodeId": "lifeline-Alice",
      "isExact": true,
      "isPrecise": true,
      "label": "Great!",
      "size": "s",
      "startNodeId": "lifeline-John",
    },
    {
      "anchorEndY": 0.75,
      "anchorStartY": 0.75,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "endNodeId": "lifeline-John",
      "isExact": true,
      "isPrecise": true,
      "label": "See you later!",
      "size": "s",
      "startNodeId": "lifeline-Alice",
    },
  ],
  "groups": [
    [
      "actor-top-Alice",
      "lifeline-Alice",
      "actor-bottom-Alice",
    ],
    [
      "actor-top-John",
      "lifeline-John",
      "actor-bottom-John",
    ],
  ],
  "lines": [
    {
      "endY": 390,
      "id": "lifeline-Alice",
      "x": -150,
      "y": -190,
    },
    {
      "endY": 390,
      "id": "lifeline-John",
      "x": 150,
      "y": -190,
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-Alice",
      "label": "Alice",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -240,
      "y": -265,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-Alice",
      "label": "Alice",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -240,
      "y": 200,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-John",
      "label": "John",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 60,
      "y": -265,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-John",
      "label": "John",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 60,
      "y": 200,
    },
  ],
}
`;

exports[`blueprint tests > state diagram > compound state diagram 1`] = `
{
  "edges": [
    {
      "bend": 0.5598278360246575,
      "endNodeId": "fA",
      "label": undefined,
      "startNodeId": "First_start",
    },
    {
      "bend": 0.5651849181373658,
      "endNodeId": "First_end",
      "label": undefined,
      "startNodeId": "fA",
    },
    {
      "bend": 0.5598278360246575,
      "endNodeId": "sA",
      "label": undefined,
      "startNodeId": "Second_start",
    },
    {
      "bend": 0.5651849181373658,
      "endNodeId": "Second_end",
      "label": undefined,
      "startNodeId": "sA",
    },
    {
      "bend": 69.8260781224428,
      "endNodeId": "First",
      "label": "",
      "startNodeId": "root_start",
    },
    {
      "bend": -69.8260781224428,
      "endNodeId": "Second",
      "label": "",
      "startNodeId": "root_start",
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "semi",
      "geo": "rectangle",
      "h": 495.99609375,
      "id": "First",
      "label": "First",
      "parentId": undefined,
      "size": "s",
      "verticalAlign": "start",
      "w": 175.234375,
      "x": 10,
      "y": 127.5,
    },
    {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "semi",
      "geo": "rectangle",
      "h": 495.99609375,
      "id": "Second",
      "label": "Second",
      "parentId": undefined,
      "size": "s",
      "verticalAlign": "start",
      "w": 176.34765625,
      "x": 285.234375,
      "y": 127.5,
    },
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 36,
      "id": "root_start",
      "parentId": undefined,
      "w": 36,
      "x": 217.5126953125,
      "y": 0.75,
    },
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 36,
      "id": "First_start",
      "parentId": "First",
      "w": 36,
      "x": 79.6171875,
      "y": 183.875,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75.24609375,
      "id": "fA",
      "label": "fA",
      "parentId": "First",
      "size": "m",
      "verticalAlign": "middle",
      "w": 70.234375,
      "x": 62.5,
      "y": 337.875,
    },
    {
      "color": "black",
      "fill": "none",
      "geo": "ellipse",
      "h": 40,
      "id": "First_end",
      "parentId": "First",
      "w": 40,
      "x": 77.6171875,
      "y": 529.12109375,
    },
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 24,
      "id": "First_end__inner",
      "parentId": "First",
      "w": 24,
      "x": 85.6171875,
      "y": 537.12109375,
    },
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 36,
      "id": "Second_start",
      "parentId": "Second",
      "w": 36,
      "x": 355.408203125,
      "y": 183.875,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75.24609375,
      "id": "sA",
      "label": "sA",
      "parentId": "Second",
      "size": "m",
      "verticalAlign": "middle",
      "w": 71.34765625,
      "x": 337.734375,
      "y": 337.875,
    },
    {
      "color": "black",
      "fill": "none",
      "geo": "ellipse",
      "h": 40,
      "id": "Second_end",
      "parentId": "Second",
      "w": 40,
      "x": 353.408203125,
      "y": 529.12109375,
    },
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 24,
      "id": "Second_end__inner",
      "parentId": "Second",
      "w": 24,
      "x": 361.408203125,
      "y": 537.12109375,
    },
  ],
}
`;

exports[`blueprint tests > state diagram > compound state with bidirectional edges and self-loop 1`] = `
{
  "edges": [
    {
      "bend": 0.5598278360246575,
      "endNodeId": "Unauthed",
      "label": undefined,
      "startNodeId": "Session_start",
    },
    {
      "bend": 68.72496912441879,
      "endNodeId": "Authed",
      "label": "login",
      "startNodeId": "Unauthed",
    },
    {
      "bend": 66.47496912441879,
      "endNodeId": "Unauthed",
      "label": "logout",
      "startNodeId": "Authed",
    },
    {
      "bend": -0,
      "endNodeId": "Authed",
      "label": "refresh",
      "startNodeId": "Authed",
    },
    {
      "bend": -0,
      "endNodeId": "Session",
      "label": "",
      "startNodeId": "root_start",
    },
    {
      "bend": 0,
      "endNodeId": "root_end",
      "label": "close",
      "startNodeId": "Session",
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "semi",
      "geo": "rectangle",
      "h": 902.9843750037253,
      "id": "Session",
      "label": "Session",
      "parentId": undefined,
      "size": "s",
      "verticalAlign": "start",
      "w": 308.0322265625,
      "x": 10,
      "y": 127.5,
    },
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 36,
      "id": "root_start",
      "parentId": undefined,
      "w": 36,
      "x": 146.01611328125,
      "y": 0.75,
    },
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 36,
      "id": "Session_start",
      "parentId": "Session",
      "w": 36,
      "x": 143.46484375,
      "y": 183.875,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75.24609375,
      "id": "Unauthed",
      "label": "Unauthed",
      "parentId": "Session",
      "size": "m",
      "verticalAlign": "middle",
      "w": 175.83984375,
      "x": 73.544921875,
      "y": 337.875,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75.24609375,
      "id": "Authed",
      "label": "Authed",
      "parentId": "Session",
      "size": "m",
      "verticalAlign": "middle",
      "w": 140.234375,
      "x": 91.34765625,
      "y": 583.6171875,
    },
    {
      "color": "black",
      "fill": "none",
      "geo": "ellipse",
      "h": 40,
      "id": "root_end",
      "parentId": undefined,
      "w": 40,
      "x": 144.01611328125,
      "y": 1166.480484008789,
    },
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 24,
      "id": "root_end__inner",
      "parentId": undefined,
      "w": 24,
      "x": 152.01611328125,
      "y": 1174.480484008789,
    },
  ],
}
`;

exports[`blueprint tests > state diagram > nested compound state with history node 1`] = `
{
  "edges": [
    {
      "bend": 0.5603407147674112,
      "endNodeId": "Select",
      "label": undefined,
      "startNodeId": "Mode_start",
    },
    {
      "bend": 53.6420630886762,
      "endNodeId": "Draw",
      "label": "pen tool",
      "startNodeId": "Select",
    },
    {
      "bend": 53.01929071075694,
      "endNodeId": "Erase",
      "label": "eraser",
      "startNodeId": "Draw",
    },
    {
      "bend": 107.62292182652304,
      "endNodeId": "Select",
      "label": "pointer",
      "startNodeId": "Erase",
    },
    {
      "bend": 0.5598278360246575,
      "endNodeId": "Viewing",
      "label": undefined,
      "startNodeId": "Editor_start",
    },
    {
      "bend": 73.35821984203342,
      "endNodeId": "Mode",
      "label": "edit",
      "startNodeId": "Viewing",
    },
    {
      "bend": 63.51398983952353,
      "endNodeId": "Viewing",
      "label": "preview",
      "startNodeId": "Mode",
    },
    {
      "bend": -0,
      "endNodeId": "Editor",
      "label": "",
      "startNodeId": "root_start",
    },
    {
      "bend": -0,
      "endNodeId": "Suspended",
      "label": "sleep",
      "startNodeId": "Editor",
    },
    {
      "bend": 1.125,
      "endNodeId": "H",
      "label": "wake",
      "startNodeId": "Suspended",
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "semi",
      "geo": "rectangle",
      "h": 1489.47265625,
      "id": "Editor",
      "label": "Editor",
      "parentId": undefined,
      "size": "s",
      "verticalAlign": "start",
      "w": 492.802734375,
      "x": 10,
      "y": 127.5,
    },
    {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "semi",
      "geo": "rectangle",
      "h": 963.73046875,
      "id": "Mode",
      "label": "Mode",
      "parentId": "Editor",
      "size": "s",
      "verticalAlign": "start",
      "w": 367.802734375,
      "x": 72.5,
      "y": 587.6171875,
    },
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 36,
      "id": "root_start",
      "parentId": undefined,
      "w": 36,
      "x": 238.4013671875,
      "y": 0.75,
    },
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 36,
      "id": "Editor_start",
      "parentId": "Editor",
      "w": 36,
      "x": 238.4013671875,
      "y": 183.875,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75.24609375,
      "id": "Viewing",
      "label": "Viewing",
      "parentId": "Editor",
      "size": "m",
      "verticalAlign": "middle",
      "w": 149.55078125,
      "x": 181.6259765625,
      "y": 337.875,
    },
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 36,
      "id": "Mode_start",
      "parentId": "Mode",
      "w": 36,
      "x": 246.3994140625,
      "y": 659.6171875,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75.24609375,
      "id": "Select",
      "label": "Select",
      "parentId": "Mode",
      "size": "m",
      "verticalAlign": "middle",
      "w": 126.89453125,
      "x": 200.9521484375,
      "y": 844.8671875,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75.24609375,
      "id": "Draw",
      "label": "Draw",
      "parentId": "Mode",
      "size": "m",
      "verticalAlign": "middle",
      "w": 111.5625,
      "x": 128.8330078125,
      "y": 1121.859375,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75.24609375,
      "id": "Erase",
      "label": "Erase",
      "parentId": "Mode",
      "size": "m",
      "verticalAlign": "middle",
      "w": 115.60546875,
      "x": 206.5966796875,
      "y": 1398.8515625,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75.24609375,
      "id": "H",
      "label": "H",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 60.625,
      "x": 226.0888671875,
      "y": 1974.7109375,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75.24609375,
      "id": "Suspended",
      "label": "Suspended",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 189.3359375,
      "x": 161.7333984375,
      "y": 1760.21875,
    },
  ],
}
`;

exports[`blueprint tests > state diagram > simple state diagram 1`] = `
{
  "edges": [
    {
      "bend": 0.5589954286092864,
      "endNodeId": "Still",
      "label": "",
      "startNodeId": "root_start",
    },
    {
      "bend": 14.578229008525048,
      "endNodeId": "Moving",
      "label": "",
      "startNodeId": "Still",
    },
    {
      "bend": 12.328229008525046,
      "endNodeId": "Still",
      "label": "",
      "startNodeId": "Moving",
    },
    {
      "bend": 1.125,
      "endNodeId": "Crash",
      "label": "",
      "startNodeId": "Moving",
    },
    {
      "bend": 0.5660265412573866,
      "endNodeId": "root_end",
      "label": "",
      "startNodeId": "Crash",
    },
  ],
  "nodes": [
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 36,
      "id": "root_start",
      "parentId": undefined,
      "w": 36,
      "x": 50.349609375,
      "y": 0.75,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75.24609375,
      "id": "Still",
      "label": "Still",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 95.21484375,
      "x": 20.7421875,
      "y": 123.5,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75.24609375,
      "id": "Moving",
      "label": "Moving",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 136.69921875,
      "x": 0,
      "y": 290.74609375,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75.24609375,
      "id": "Crash",
      "label": "Crash",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 117.59765625,
      "x": 9.55078125,
      "y": 457.9921875,
    },
    {
      "color": "black",
      "fill": "none",
      "geo": "ellipse",
      "h": 40,
      "id": "root_end",
      "parentId": undefined,
      "w": 40,
      "x": 48.349609375,
      "y": 617.98828125,
    },
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 24,
      "id": "root_end__inner",
      "parentId": undefined,
      "w": 24,
      "x": 56.349609375,
      "y": 625.98828125,
    },
  ],
}
`;

exports[`blueprint tests > state diagram > state diagram with classDef fills 1`] = `
{
  "edges": [
    {
      "bend": 0.5589954286092864,
      "endNodeId": "Idle",
      "label": "",
      "startNodeId": "root_start",
    },
    {
      "bend": 1.125,
      "endNodeId": "Active",
      "label": "start",
      "startNodeId": "Idle",
    },
    {
      "bend": 0.5660265412573866,
      "endNodeId": "root_end",
      "label": "",
      "startNodeId": "Active",
    },
  ],
  "nodes": [
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 36,
      "id": "root_start",
      "parentId": undefined,
      "w": 36,
      "x": 46.130859375,
      "y": 0.75,
    },
    {
      "align": "middle",
      "color": "light-green",
      "fill": "solid",
      "geo": "rectangle",
      "h": 75.24609375,
      "id": "Idle",
      "label": "Idle",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 92.79296875,
      "x": 17.734375,
      "y": 123.5,
    },
    {
      "align": "middle",
      "color": "red",
      "fill": "solid",
      "geo": "rectangle",
      "h": 75.24609375,
      "id": "Active",
      "label": "Active",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 128.26171875,
      "x": 0,
      "y": 337.9921875,
    },
    {
      "color": "black",
      "fill": "none",
      "geo": "ellipse",
      "h": 40,
      "id": "root_end",
      "parentId": undefined,
      "w": 40,
      "x": 44.130859375,
      "y": 497.98828125,
    },
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 24,
      "id": "root_end__inner",
      "parentId": undefined,
      "w": 24,
      "x": 52.130859375,
      "y": 505.98828125,
    },
  ],
}
`;

exports[`blueprint tests > state diagram > state diagram with notes 1`] = `
{
  "edges": [
    {
      "bend": 0.5589954286092864,
      "endNodeId": "TicketOpen",
      "label": "",
      "startNodeId": "root_start",
    },
    {
      "bend": 1.125,
      "endNodeId": "Investigating",
      "label": "assign",
      "startNodeId": "TicketOpen",
    },
    {
      "bend": 54.935992671885785,
      "endNodeId": "WaitingForCustomer",
      "label": "need info",
      "startNodeId": "Investigating",
    },
    {
      "bend": 162.55045411215397,
      "endNodeId": "Investigating",
      "label": "reply received",
      "startNodeId": "WaitingForCustomer",
    },
    {
      "bend": 102.01127471086907,
      "endNodeId": "Resolved",
      "label": "fix applied",
      "startNodeId": "Investigating",
    },
    {
      "bend": 1.125,
      "endNodeId": "Closed",
      "label": "confirm",
      "startNodeId": "Resolved",
    },
    {
      "arrowheadEnd": "none",
      "bend": 0,
      "dash": "dotted",
      "endNodeId": "WaitingForCustomer----note",
      "label": undefined,
      "startNodeId": "WaitingForCustomer",
    },
  ],
  "nodes": [
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 36,
      "id": "root_start",
      "parentId": undefined,
      "w": 36,
      "x": 316.39453125,
      "y": 0.75,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75.24609375,
      "id": "TicketOpen",
      "label": "TicketOpen",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 200.29296875,
      "x": 234.248046875,
      "y": 123.5,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75.24609375,
      "id": "Investigating",
      "label": "Investigating",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 219.66796875,
      "x": 224.560546875,
      "y": 337.9921875,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75.24609375,
      "id": "WaitingForCustomer",
      "label": "WaitingForCustomer",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 324.5703125,
      "x": 268.6083984375,
      "y": 552.484375,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75.24609375,
      "id": "Resolved",
      "label": "Resolved",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 163.33984375,
      "x": 3.61328125,
      "y": 552.484375,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 75.24609375,
      "id": "Closed",
      "label": "Closed",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 132.51953125,
      "x": 19.0234375,
      "y": 855.599609375,
    },
    {
      "align": "middle",
      "color": "yellow",
      "fill": "solid",
      "geo": "rectangle",
      "h": 152.4921875,
      "id": "WaitingForCustomer----note",
      "label": "SLA clock may pause here",
      "parentId": undefined,
      "size": "s",
      "verticalAlign": "middle",
      "w": 320,
      "x": 270.8935546875,
      "y": 816.9765625,
    },
  ],
}
`;
